[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Objects/Projectile_MotionRoot.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Objects/Projectile.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Spikes.gd" type="Script" id=3]
[ext_resource path="res://Assets/General/Shadows/circle shadow small.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Rendering/DepthTestCharacterSprite.gd" type="Script" id=5]
[ext_resource path="res://NPC/NPC_ShadowAreaCheck.gd" type="Script" id=6]
[ext_resource path="res://Assets/General/Basic Poof SS.png" type="Texture" id=7]
[ext_resource path="res://Assets/Puzzle Pier/Circus/Cannonball B.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=180]

[sub_resource type="CircleShape2D" id=172]
radius = 1.0

[sub_resource type="CircleShape2D" id=181]
radius = 170.199

[sub_resource type="CircleShape2D" id=182]
radius = 170.199

[sub_resource type="Animation" id=183]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Poof:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Poof:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Poof:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Poof:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Poof:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Projectile:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BodyYSort/BodyVisualRoot/Sprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BodyYSort/BodyVisualRoot/Sprite:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.976471, 0.968627, 0.956863, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("BodyYSort/BodyVisualRoot/Sprite:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=184]
resource_name = "destruct"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Poof:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Poof:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "delete"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Poof:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Poof:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Poof:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BodyYSort/BodyVisualRoot/Sprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BodyYSort/BodyVisualRoot/Sprite:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.976471, 0.968627, 0.956863, 1 ), Color( 0.976471, 0.968627, 0.956863, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("BodyYSort/BodyVisualRoot/Sprite:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.01, 0.01 ) ]
}

[node name="Projectile" type="YSort"]
script = ExtResource( 2 )
height = 120

[node name="MotionRoot" type="KinematicBody2D" parent="."]
collision_layer = 0
collision_mask = 0
collision/safe_margin = 0.5
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MotionRoot"]
position = Vector2( 2, 0.0728853 )
scale = Vector2( 1.42294, 0.314577 )
shape = SubResource( 180 )
disabled = true

[node name="ShadowAreaCheck" type="Area2D" parent="MotionRoot"]
visible = false
position = Vector2( 1, 0 )
script = ExtResource( 6 )

[node name="ShadowCheck" type="CollisionShape2D" parent="MotionRoot/ShadowAreaCheck"]
visible = false
position = Vector2( 1, 0 )
shape = SubResource( 172 )
disabled = true

[node name="Ouch" type="Area2D" parent="MotionRoot"]
position = Vector2( 3, -25 )
collision_layer = 0
collision_mask = 5
script = ExtResource( 3 )
target_scene = "res://Areas/Puzzle Pier/Circus_4.tscn"
height = 120.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MotionRoot/Ouch"]
modulate = Color( 1, 1, 1, 0.254902 )
position = Vector2( 0, 1 )
scale = Vector2( 0.15685, 0.149126 )
shape = SubResource( 181 )
disabled = true

[node name="PlayerDetection" type="Area2D" parent="MotionRoot"]
position = Vector2( 2, -25 )
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="MotionRoot/PlayerDetection"]
modulate = Color( 1, 1, 1, 0.254902 )
position = Vector2( 7.10543e-15, 1 )
scale = Vector2( 0.156004, 0.150738 )
shape = SubResource( 182 )

[node name="ShadowYSort" type="Node2D" parent="."]
visible = false

[node name="ShadowVisualRoot" type="Node2D" parent="ShadowYSort"]
visible = false

[node name="ShadowCircle" type="Sprite" parent="ShadowYSort/ShadowVisualRoot"]
visible = false
modulate = Color( 1, 1, 1, 0.75 )
position = Vector2( 3, -1 )
scale = Vector2( 1.25253, 1.10018 )
texture = ExtResource( 4 )
script = ExtResource( 5 )
alpha_clip = 0.01
depth_test_offset = Vector2( 0, 300 )
use_dithering = false
use_dither_blending = false

[node name="BodyYSort" type="Node2D" parent="."]

[node name="BodyVisualRoot" type="Node2D" parent="BodyYSort"]

[node name="Sprite" type="Sprite" parent="BodyYSort/BodyVisualRoot"]
modulate = Color( 0.976471, 0.968627, 0.956863, 1 )
position = Vector2( 3, -24 )
texture = ExtResource( 8 )
script = ExtResource( 5 )
depth_test_offset = Vector2( 0, 150 )
use_dithering = false
use_dither_blending = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 183 )
anims/destruct = SubResource( 184 )

[node name="Poof" type="Sprite" parent="."]
visible = false
position = Vector2( 6, -24 )
scale = Vector2( 2, 2 )
z_index = 1
texture = ExtResource( 7 )
hframes = 4

[connection signal="body_entered" from="MotionRoot/PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="MotionRoot/PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
